Introduce BinaryReader API for reading binary data